src/main/resources/testsuite/valid/3nanopubs-lsigned.trig
@prefix this: <http://example.org/mynanopub1#RAdb89nCVXGoHMIZMjy20SpM4Tvi3a42cYcSnUZPol664> .
@prefix sub: <http://example.org/mynanopub1#RAdb89nCVXGoHMIZMjy20SpM4Tvi3a42cYcSnUZPol664.> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix dc: <http://purl.org/dc/terms/> .
@prefix pav: <http://purl.org/pav/> .
@prefix prov: <http://www.w3.org/ns/prov#> .
@prefix np: <http://www.nanopub.org/nschema#> .
@prefix ex: <http://example.org/> .
@prefix npx: <http://purl.org/nanopub/x/> .

sub:Head {
	this: np:hasAssertion sub:assertion ;
		np:hasProvenance sub:provenance ;
		np:hasPublicationInfo sub:pubinfo ;
		a np:Nanopublication .
}

sub:assertion {
	ex:mosquito ex:transmits ex:malaria .
}

sub:provenance {
	sub:assertion prov:wasDerivedFrom <http://dx.doi.org/10.3233/ISU-2010-0613> .
}

sub:pubinfo {
	this: dc:created "2014-07-09T13:54:11+01:00"^^xsd:dateTime ;
		npx:hasSignatureElement <http://example.org/mynanopub1#RAdb89nCVXGoHMIZMjy20SpM4Tvi3a42cYcSnUZPol664.signature.MCwCFDskALD4NM9V> ;
		pav:createdBy <http://orcid.org/0000-0002-1267-0234> .
	
	<http://example.org/mynanopub1#RAdb89nCVXGoHMIZMjy20SpM4Tvi3a42cYcSnUZPol664.signature.MCwCFDskALD4NM9V> npx:hasPublicKey "MIIBtzCCASwGByqGSM44BAEwggEfAoGBAP1/U4EddRIpUt9KnC7s5Of2EbdSPO9EAMMeP4C2USZpRV1AIlH7WT2NWPq/xfW6MPbLm1Vs14E7gB00b/JmYLdrmVClpJ+f6AR7ECLCT7up1/63xhv4O1fnxqimFQ8E+4P208UewwI1VBNaFpEy9nXzrith1yrv8iIDGZ3RSAHHAhUAl2BQjxUjC8yykrmCouuEC/BYHPUCgYEA9+GghdabPd7LvKtcNrhXuXmUr7v6OuqC+VdMCz0HgmdRWVeOutRZT+ZxBxCBgLRJFnEj6EwoFhO3zwkyjMim4TwWeotUfI0o4KOuHiuzpnWRbqN/C/ohNWLx+2J6ASQ7zKTxvqhRkImog9/hWuWfBpKLZl6Ae1UlZAFMO/7PSSoDgYQAAoGAEHvFRpU7ryp1gAOi2yoy2VX8jraJdwPo6ZC1idtsGVcmou89Y3KOoJmlW3VU8ZPolpVWuM+EPNmLNFmifYr+svu8AOQkilZBLdkS5BrPVxIpV0dLeaBUroof1wPsVuwEPOdNzWsEmPF1Az8qLGEdPbyn7ehWqO/lNVmW8+c4O2k=" ;
		npx:hasSignature "MCwCFDskALD4NM9V1TN8amCMm+OOdVLdAhRFkJMCpKeGUqDInLMtVjCP5OjUew==" .
}
@prefix this: <http://example.org/mynanopub2#RAokqqbqjoS1uUQyv8NdE8CSqR6561QrCvpDQWeGD-eew> .
@prefix sub: <http://example.org/mynanopub2#RAokqqbqjoS1uUQyv8NdE8CSqR6561QrCvpDQWeGD-eew.> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix dc: <http://purl.org/dc/terms/> .
@prefix pav: <http://purl.org/pav/> .
@prefix prov: <http://www.w3.org/ns/prov#> .
@prefix np: <http://www.nanopub.org/nschema#> .
@prefix ex: <http://example.org/> .
@prefix npx: <http://purl.org/nanopub/x/> .

sub:Head {
	this: np:hasAssertion sub:assertion ;
		np:hasProvenance sub:provenance ;
		np:hasPublicationInfo sub:pubinfo ;
		a np:Nanopublication .
}

sub:assertion {
	ex:Gene1 ex:isRealtedTo ex:malaria .
}

sub:provenance {
	sub:assertion prov:wasDerivedFrom <http://dx.doi.org/10.3233/ISU-2010-0613> .
}

sub:pubinfo {
	this: dc:created "2014-07-09T13:54:11+01:00"^^xsd:dateTime ;
		npx:hasSignatureElement <http://example.org/mynanopub2#RAokqqbqjoS1uUQyv8NdE8CSqR6561QrCvpDQWeGD-eew.signature.MCwCFHscsK31WxVu> ;
		pav:createdBy <http://orcid.org/0000-0002-1267-0234> .
	
	<http://example.org/mynanopub2#RAokqqbqjoS1uUQyv8NdE8CSqR6561QrCvpDQWeGD-eew.signature.MCwCFHscsK31WxVu> npx:hasPublicKey "MIIBtzCCASwGByqGSM44BAEwggEfAoGBAP1/U4EddRIpUt9KnC7s5Of2EbdSPO9EAMMeP4C2USZpRV1AIlH7WT2NWPq/xfW6MPbLm1Vs14E7gB00b/JmYLdrmVClpJ+f6AR7ECLCT7up1/63xhv4O1fnxqimFQ8E+4P208UewwI1VBNaFpEy9nXzrith1yrv8iIDGZ3RSAHHAhUAl2BQjxUjC8yykrmCouuEC/BYHPUCgYEA9+GghdabPd7LvKtcNrhXuXmUr7v6OuqC+VdMCz0HgmdRWVeOutRZT+ZxBxCBgLRJFnEj6EwoFhO3zwkyjMim4TwWeotUfI0o4KOuHiuzpnWRbqN/C/ohNWLx+2J6ASQ7zKTxvqhRkImog9/hWuWfBpKLZl6Ae1UlZAFMO/7PSSoDgYQAAoGAEHvFRpU7ryp1gAOi2yoy2VX8jraJdwPo6ZC1idtsGVcmou89Y3KOoJmlW3VU8ZPolpVWuM+EPNmLNFmifYr+svu8AOQkilZBLdkS5BrPVxIpV0dLeaBUroof1wPsVuwEPOdNzWsEmPF1Az8qLGEdPbyn7ehWqO/lNVmW8+c4O2k=" ;
		npx:hasSignature "MCwCFHscsK31WxVuRvHibVbtSpA6HPOaAhRo9M/ocvqo/F5W5gH02cWKT7Qqcw==" .
}
@prefix this: <http://example.org/mynanopub3#RAmesL_s-ORMwYGQc8NzAKO8eV6T9aGn-nIxS0373tUf8> .
@prefix sub: <http://example.org/mynanopub3#RAmesL_s-ORMwYGQc8NzAKO8eV6T9aGn-nIxS0373tUf8.> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix dc: <http://purl.org/dc/terms/> .
@prefix pav: <http://purl.org/pav/> .
@prefix prov: <http://www.w3.org/ns/prov#> .
@prefix np: <http://www.nanopub.org/nschema#> .
@prefix ex: <http://example.org/> .
@prefix npx: <http://purl.org/nanopub/x/> .

sub:Head {
	this: np:hasAssertion sub:assertion ;
		np:hasProvenance sub:provenance ;
		np:hasPublicationInfo sub:pubinfo ;
		a np:Nanopublication .
}

sub:assertion {
	ex:Gene2 ex:isRealtedTo ex:malaria .
}

sub:provenance {
	sub:assertion prov:wasDerivedFrom <http://dx.doi.org/10.3233/ISU-2010-0613> .
}

sub:pubinfo {
	this: dc:created "2014-07-09T13:54:11+01:00"^^xsd:dateTime ;
		npx:hasSignatureElement <http://example.org/mynanopub3#RAmesL_s-ORMwYGQc8NzAKO8eV6T9aGn-nIxS0373tUf8.signature.MCwCFHh8Hynrh-WI> ;
		pav:createdBy <http://orcid.org/0000-0002-1267-0234> .
	
	<http://example.org/mynanopub3#RAmesL_s-ORMwYGQc8NzAKO8eV6T9aGn-nIxS0373tUf8.signature.MCwCFHh8Hynrh-WI> npx:hasPublicKey "MIIBtzCCASwGByqGSM44BAEwggEfAoGBAP1/U4EddRIpUt9KnC7s5Of2EbdSPO9EAMMeP4C2USZpRV1AIlH7WT2NWPq/xfW6MPbLm1Vs14E7gB00b/JmYLdrmVClpJ+f6AR7ECLCT7up1/63xhv4O1fnxqimFQ8E+4P208UewwI1VBNaFpEy9nXzrith1yrv8iIDGZ3RSAHHAhUAl2BQjxUjC8yykrmCouuEC/BYHPUCgYEA9+GghdabPd7LvKtcNrhXuXmUr7v6OuqC+VdMCz0HgmdRWVeOutRZT+ZxBxCBgLRJFnEj6EwoFhO3zwkyjMim4TwWeotUfI0o4KOuHiuzpnWRbqN/C/ohNWLx+2J6ASQ7zKTxvqhRkImog9/hWuWfBpKLZl6Ae1UlZAFMO/7PSSoDgYQAAoGAEHvFRpU7ryp1gAOi2yoy2VX8jraJdwPo6ZC1idtsGVcmou89Y3KOoJmlW3VU8ZPolpVWuM+EPNmLNFmifYr+svu8AOQkilZBLdkS5BrPVxIpV0dLeaBUroof1wPsVuwEPOdNzWsEmPF1Az8qLGEdPbyn7ehWqO/lNVmW8+c4O2k=" ;
		npx:hasSignature "MCwCFHh8Hynrh+WI0vWLFaVsacMK3vfdAhRHPSzTeJ1pyl6b/RJuzlS8nVa6Pg==" .
}
