src/main/resources/testsuite/invalid/simple1-invalid-dsa.trig
@prefix this: <http://example.org/nanopub-validator-example/RAuryDo2ZM4ezVvol4IfLUE6nYlLIjojxjZhooRcy-eUY> .
@prefix sub: <http://example.org/nanopub-validator-example/RAuryDo2ZM4ezVvol4IfLUE6nYlLIjojxjZhooRcy-eUY#> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix dc: <http://purl.org/dc/terms/> .
@prefix pav: <http://purl.org/pav/> .
@prefix prov: <http://www.w3.org/ns/prov#> .
@prefix np: <http://www.nanopub.org/nschema#> .
@prefix npx: <http://purl.org/nanopub/x/> .
@prefix ex: <http://example.org/> .

sub:Head {
	this: np:hasAssertion sub:assertion ;
		np:hasProvenance sub:provenance ;
		np:hasPublicationInfo sub:pubinfo ;
		a np:Nanopublication .
}

sub:assertion {
	ex:mosquito ex:transmits ex:malAria .
}

sub:provenance {
	sub:assertion prov:hadPrimarySource <http://dx.doi.org/10.3233/ISU-2010-0613> .
}

sub:pubinfo {
	sub:signature npx:hasAlgorithm "DSA" ;
		npx:hasPublicKey "MIIBtzCCASwGByqGSM44BAEwggEfAoGBAP1/U4EddRIpUt9KnC7s5Of2EbdSPO9EAMMeP4C2USZpRV1AIlH7WT2NWPq/xfW6MPbLm1Vs14E7gB00b/JmYLdrmVClpJ+f6AR7ECLCT7up1/63xhv4O1fnxqimFQ8E+4P208UewwI1VBNaFpEy9nXzrith1yrv8iIDGZ3RSAHHAhUAl2BQjxUjC8yykrmCouuEC/BYHPUCgYEA9+GghdabPd7LvKtcNrhXuXmUr7v6OuqC+VdMCz0HgmdRWVeOutRZT+ZxBxCBgLRJFnEj6EwoFhO3zwkyjMim4TwWeotUfI0o4KOuHiuzpnWRbqN/C/ohNWLx+2J6ASQ7zKTxvqhRkImog9/hWuWfBpKLZl6Ae1UlZAFMO/7PSSoDgYQAAoGAEHvFRpU7ryp1gAOi2yoy2VX8jraJdwPo6ZC1idtsGVcmou89Y3KOoJmlW3VU8ZPolpVWuM+EPNmLNFmifYr+svu8AOQkilZBLdkS5BrPVxIpV0dLeaBUroof1wPsVuwEPOdNzWsEmPF1Az8qLGEdPbyn7ehWqO/lNVmW8+c4O2k=" ;
		npx:hasSignature "MCwCFFMlGKFn+75HC3sP6JjBNubA1yPKAhReEzogcNHOueSlRzocjB7fyU4zFw==" ;
		npx:hasSignatureTarget this: .
	
	this: dc:created "2014-07-24T18:05:11+01:00"^^xsd:dateTime ;
		pav:createdBy <http://orcid.org/0000-0002-1267-0234> ;
		a npx:ExampleNanopub .
}
